// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductPreview should render a single product preview with an image 1`] = `
<div
  className="wc-product-preview wc-block-grid__product"
>
  <div
    className="wc-product-preview__image wc-block-grid__product-image"
  >
    <img
      alt=""
      className="wc-product-preview__image"
      src="https://example.local/product.jpg"
      style={
        Object {
          "width": "300px",
        }
      }
    />
  </div>
  <div
    className="wc-product-preview__title wc-block-grid__product-title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Winter Jacket",
      }
    }
  />
  <div
    className="wc-product-preview__price wc-block-grid__product-price"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"woocommerce-Price-amount amount\\"><span class=\\"woocommerce-Price-currencySymbol\\">&#36;</span>65.00</span>",
      }
    }
  />
  <span
    className="wp-block-button"
  >
    <span
      className="wc-product-preview__add-to-cart wc-block-grid__product-add-to-cart wp-block-button__link"
    >
      Add to cart
    </span>
  </span>
</div>
`;

exports[`ProductPreview should render a single product preview without an image 1`] = `
<div
  className="wc-product-preview wc-block-grid__product"
>
  <div
    className="wc-product-preview__image wc-block-grid__product-image"
  >
    <img
      alt=""
      className="wc-product-preview__image"
      src="placeholder.png"
      style={
        Object {
          "width": "300px",
        }
      }
    />
  </div>
  <div
    className="wc-product-preview__title wc-block-grid__product-title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Winter Jacket",
      }
    }
  />
  <div
    className="wc-product-preview__price wc-block-grid__product-price"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<span class=\\"woocommerce-Price-amount amount\\"><span class=\\"woocommerce-Price-currencySymbol\\">&#36;</span>65.00</span>",
      }
    }
  />
  <span
    className="wp-block-button"
  >
    <span
      className="wc-product-preview__add-to-cart wc-block-grid__product-add-to-cart wp-block-button__link"
    >
      Add to cart
    </span>
  </span>
</div>
`;
